fix toptimes links for pro style, some spacing for announcer

--- a/web/nwrsc/static/scss/announcer.scss
+++ b/web/nwrsc/static/scss/announcer.scss
@@ -68,6 +68,7 @@ table.next {
 
 table.res {
     width: 100%;
+    margin-top: 3px;
     td {
         white-space: nowrap;
         border: 1px solid gray;
